--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "renterapi",
   "version": "1.0.0",
   "description": "Arac Kiralama API",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "db:create": "node src/scripts/createDb.js",
     "db:seed": "node src/scripts/seed.js",
     "db:setup": "npm run db:create && npm run db:seed"
